testsuite/tests/probes/illegal_probe_names_t2.compilers.reference
File "illegal_probe_names_t2.ml", line 15, characters 10-154:
15 |   [%probe "this_probe_name_is_way_too_long_0123456789_0123456789_0123456789_0123456789_0123456789_0123456789_0123456789_0123456789_0123456789_0123456789_" ()]
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This probe name is too long: `this_probe_name_is_way_too_long_0123456789_0123456789_0123456789_0123456789_0123456789_0123456789_0123456789_0123456789_0123456789_0123456789_'. Probe names must be at most 100 characters long.
